--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ ml_models/logistic_model.pkl
 models/__pycache__/passenger.cpython-311.pyc
 libs/__pycache__/model.cpython-311.pyc
 libs/__pycache__/model.cpython-311.pyc
+libs/__pycache__/model.cpython-311.pyc
